--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!-- header start -->
 
 <a href="{{ site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
+<link rel="shortcut icon" href="{{site.ico}}">
 
 <!-- header end -->
